--- a/ConferenceService/Properties/launchSettings.json
+++ b/ConferenceService/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/bid",
+      "launchUrl": "swagger/",
       "applicationUrl": "https://localhost:7115;http://localhost:5186",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
