--- a/ConferenceService/appsettings.json
+++ b/ConferenceService/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=conferenceServise;Username=postgres;Password=0000"
+    "DefaultConnection": ""
   },
   "AllowedHosts": "*"
 }
