--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DAL\DAL.csproj" />
+    <Folder Include="interfaces\Repositories\" />
   </ItemGroup>
 
 </Project>
